# routers/commentsRouter_controllers.go
@@ -15,4 +15,20 @@ func init() {
 			MethodParams: param.Make(),
 			Params: nil})
 
+	beego.GlobalControllerRouter["plan_trabajo_docente_mid/controllers:SolicitudSoportePlanTrabajoController"] = append(beego.GlobalControllerRouter["plan_trabajo_docente_mid/controllers:SolicitudSoportePlanTrabajoController"],
+		beego.ControllerComments{
+			Method: "ObtenerInformacionDependencias",
+			Router: `/informacion_dependencias`,
+			AllowHTTPMethods: []string{"get"},
+			MethodParams: param.Make(),
+			Params: nil})
+
+	beego.GlobalControllerRouter["plan_trabajo_docente_mid/controllers:SolicitudSoportePlanTrabajoController"] = append(beego.GlobalControllerRouter["plan_trabajo_docente_mid/controllers:SolicitudSoportePlanTrabajoController"],
+		beego.ControllerComments{
+			Method: "ObtenerSolicitudesDocente",
+			Router: `/solicitudes_docente`,
+			AllowHTTPMethods: []string{"get"},
+			MethodParams: param.Make(),
+			Params: nil})
+
 }
